Add results for prez

--- a/results/2_hr_MSG_result copy.ipynb
+++ b/results/2_hr_MSG_result copy.ipynb
@@ -1899,11 +1899,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'C' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Define the GP kernel\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# - RBF for smooth trends\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# - ExpSineSquared for periodicity\u001b[39;00m\n\u001b[1;32m      4\u001b[0m kernel \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m----> 5\u001b[0m    \u001b[43mC\u001b[49m(\u001b[38;5;241m30.0\u001b[39m, (\u001b[38;5;241m1e-1\u001b[39m, \u001b[38;5;241m1e5\u001b[39m))  \u001b[38;5;66;03m# Constant term to scale the entire kernel\u001b[39;00m\n\u001b[1;32m      6\u001b[0m    \u001b[38;5;241m*\u001b[39m RBF(length_scale\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1.0\u001b[39m, length_scale_bounds\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m1e-3\u001b[39m, \u001b[38;5;241m1e3\u001b[39m))  \u001b[38;5;66;03m# Squared exponential\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \n\u001b[1;32m      8\u001b[0m     \u001b[38;5;241m+\u001b[39m C(\u001b[38;5;241m50.0\u001b[39m, (\u001b[38;5;241m1e-1\u001b[39m, \u001b[38;5;241m1e5\u001b[39m))  \u001b[38;5;66;03m# Constant term for cosine scaling\u001b[39;00m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;241m*\u001b[39m ExpSineSquared(length_scale\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1.0\u001b[39m, periodicity\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m12\u001b[39m, periodicity_bounds\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfixed\u001b[39m\u001b[38;5;124m\"\u001b[39m)  \u001b[38;5;66;03m# Cosine every 24\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m## These two above work\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \n\u001b[1;32m     12\u001b[0m     \u001b[38;5;241m+\u001b[39m C(\u001b[38;5;241m50.0\u001b[39m, (\u001b[38;5;241m1e-1\u001b[39m, \u001b[38;5;241m1e5\u001b[39m))  \u001b[38;5;66;03m# Constant term for cosine scaling\u001b[39;00m\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;241m*\u001b[39m ExpSineSquared(length_scale\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1.0\u001b[39m, periodicity\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m6\u001b[39m, periodicity_bounds\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfixed\u001b[39m\u001b[38;5;124m\"\u001b[39m)  \u001b[38;5;66;03m# Cosine every 12\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m## These two above work\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \n\u001b[1;32m     16\u001b[0m   \u001b[38;5;241m+\u001b[39m WhiteKernel(noise_level\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1.0\u001b[39m, noise_level_bounds\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m1e-3\u001b[39m, \u001b[38;5;241m1e3\u001b[39m))\n\u001b[1;32m     17\u001b[0m )\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Instantiate and fit the Gaussian Process Regressor\u001b[39;00m\n\u001b[1;32m     20\u001b[0m gp \u001b[38;5;241m=\u001b[39m GaussianProcessRegressor(kernel\u001b[38;5;241m=\u001b[39mkernel, n_restarts_optimizer\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m, normalize_y\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'C' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the GP kernel\n",
+    "# - RBF for smooth trends\n",
+    "# - ExpSineSquared for periodicity\n",
+    "kernel = (\n",
+    "   C(30.0, (1e-1, 1e5))  # Constant term to scale the entire kernel\n",
+    "   * RBF(length_scale=1.0, length_scale_bounds=(1e-3, 1e3))  # Squared exponential\n",
+    "\n",
+    "    + C(50.0, (1e-1, 1e5))  # Constant term for cosine scaling\n",
+    "    * ExpSineSquared(length_scale=1.0, periodicity=12, periodicity_bounds=\"fixed\")  # Cosine every 24\n",
+    "## These two above work\n",
+    "\n",
+    "    + C(50.0, (1e-1, 1e5))  # Constant term for cosine scaling\n",
+    "    * ExpSineSquared(length_scale=1.0, periodicity=6, periodicity_bounds=\"fixed\")  # Cosine every 12\n",
+    "## These two above work\n",
+    "\n",
+    "  + WhiteKernel(noise_level=1.0, noise_level_bounds=(1e-3, 1e3))\n",
+    ")\n",
+    "\n",
+    "# Instantiate and fit the Gaussian Process Regressor\n",
+    "gp = GaussianProcessRegressor(kernel=kernel, n_restarts_optimizer=50, normalize_y=True)\n",
+    "gp.fit(X_train, y_train)\n",
+    "print(\"Fit Complete\")\n",
+    "print(\"Learned Kernel:\", gp.kernel_)\n",
+    "\n",
+    "# Make predictions (add mean back)\n",
+    "y_pred, sigma = gp.predict(X_test, return_std=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "rmse = root_mean_squared_error(y_test, y_pred)\n",
+    "mape = mean_absolute_percentage_error(y_test, y_pred)\n",
+    "print(f\"Root Mean Squared Error: {rmse:.3f}\")\n",
+    "print(f\"MAPE: {mape:.3f}\")\n",
+    "\n",
+    "# Visualize predictions\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.scatter(range(len(y_test[:100])), y_test[:100], label=\"True Values\", color=\"blue\", alpha=0.6)\n",
+    "plt.plot(range(len(y_pred[:100])), y_pred[:100], label=\"GP Predictions\", color=\"red\", linestyle=\"dashed\")\n",
+    "plt.fill_between(\n",
+    "    range(len(y_pred[:100])),\n",
+    "    y_pred[:100] - 1.96 * sigma[:100],\n",
+    "    y_pred[:100] + 1.96 * sigma[:100],\n",
+    "    color=\"lightgrey\",\n",
+    "    alpha=0.5,\n",
+    "    label=\"95% Confidence Interval\",\n",
+    ")\n",
+    "plt.xlabel(\"Sample Index\")\n",
+    "plt.ylabel(\"Pickup Count\")\n",
+    "plt.title(\"Gaussian Process Regression: Pickup Count Prediction (First 100)\")\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Sigma\")\n",
+    "print(sigma.mean())\n",
+    "\n",
+    "# Compute residuals\n",
+    "residuals = y_test - y_pred\n",
+    "\n",
+    "# Residual plot\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.scatter(y_pred, residuals, color='blue')\n",
+    "plt.axhline(0, color='red', linestyle='--', label='Zero Residual')\n",
+    "plt.xlabel('Predicted Pickup Count')\n",
+    "plt.ylabel('Residuals')\n",
+    "plt.title('Residual Plot (Predicted vs Error)')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()\n",
+    "\n",
+    "# Error Analysis Over the Hour\n",
+    "test['hour'] = test['pickup_time'].dt.hour\n",
+    "error_by_hour = test.assign(residual=residuals).groupby('hour')['residual'].mean()\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.bar(error_by_hour.index, error_by_hour.values, color='purple', alpha=0.7)\n",
+    "plt.axhline(0, color='red', linestyle='--', label='Zero Error')\n",
+    "plt.xlabel(\"Hour of the Day\")\n",
+    "plt.ylabel(\"Mean Residual (Prediction Error)\")\n",
+    "plt.title(f\"Error Analysis by Hour\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#95\n",
+    "sigma.mean() * 1.96"
    ]
   }
  ],
